--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@notionhq/client": "^2.2.15",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "cross-fetch": "^3.1.5"
   }
 }
